ecmascript/parser/tests/typescript-errors/tsc/async/es5/asyncInterface_es5/input.ts.stderr
error: Expected ident
 --> $DIR/tests/typescript-errors/tsc/async/es5/asyncInterface_es5/input.ts:4:7
  |
4 | async interface I {
  |       ^^^^^^^^^

